--- a/src/sass/_variable.scss
+++ b/src/sass/_variable.scss
@@ -1,6 +1,9 @@
+@use "sass:color";
+
 // الألوان الأساسية
 $primary-color: #ff6f61;       // وردي دافئ وودود
 $primary-dark: #e85c50;
+$primary-light: color.adjust($primary-color, $lightness: 10%);
 
 $secondary-color: #42b983;     // أخضر زمردي مريح
 $secondary-dark: #379d6d;
