--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,6 +2,7 @@
 @use './index';
 @use './login';
 @use './register';
+@use './student-pages';
 
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
 
